<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_bot</name>
  <version>1.0.0</version>
  <description>
    Differential-drive mobile robot with 2D lidar, SLAM Toolbox-based mapping,
    and Navigation2 autonomous navigation — simulated in Gazebo under ROS 2 Humble.
  </description>
  <maintainer email="salilnpatil@gmail.com">Salil Patil</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>slam_toolbox</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>twist_mux</depend>
  <depend>rviz2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
